--- a/style.css
+++ b/style.css
@@ -2,5 +2,16 @@
     margin-top: 70px;
 }
 
+h3 {
+    font-family: "Single Day", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+h2 {
+    font-family: "Gloria Hallelujah", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
 
 
