--- a/style.css
+++ b/style.css
@@ -17,7 +17,10 @@ h2 {
     background-color: #b2e5ed;
   }
 
-  
 
+h1 {
+    font-family: "Gloria Hallelujah", cursive;
+    font-weight: 400;
+    font-style: normal;
 
 
